[package]
name = "pateana"
version = "0.1.0"
authors = ["toaster <joelbasar@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"

[dependencies.hyper]
version = "0.14.25"
default-features = false
features = ["server", "tcp", "http1"]

[dependencies.tokio]
version = "1.26.0"
default-features = false
features = ["macros", "rt-multi-thread"]